# IL2CPP_Resolver

./: CMakeLists.txt  README.md
cmake/: IL2CPP_ResolverConfig.cmake.in
include/IL2CPP_Resolver/: IL2CPP_Resolver.h
include/IL2CPP_Resolver/Unity/API/: Camera.h  Component.h  GameObject.h  LayerMask.h  Object.h  Rigidbody.h  Transform.h
include/IL2CPP_Resolver/Unity/Structures/: Engine.h  System_String.h  il2cppArray.h  il2cppDictionary.h
include/IL2CPP_Resolver/Utils/: Hash.h  VTable.h
src/: IL2CPP_Resolver.cpp
src/Unity/API/: Camera.cpp  Component.cpp  GameObject.cpp  LayerMask.cpp  Object.cpp  Rigidbody.cpp  Transform.cpp
src/Unity/Structures/: Engine.cpp  System_String.cpp  il2cppArray.cpp  il2cppDictionary.cpp
src/Utils/: Hash.cpp  Helper.cpp  VTable.cpp
